v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__commands__functions__object_output_type__command_permissions.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
[
  {
    "rows": [
      {
        "__value": {
          "movie_id": 1,
          "name": "Leonardo DiCaprio"
        }
      }
    ]
  }
]
